--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 /* Added a new feature in css. */
-<<<<<<< HEAD
-/*  ADD new feature => form */
-=======
 
-/* Added a new feature => button , display */
->>>>>>> feature
+/*  ADD new feature => form */
+
+/* Added a new feature => button */
